--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Shreyas Patil</title>
+    <title>Portfolio - Sangeeth Salvin </title>
     <link rel="stylesheet" href="mystyles.css">
     <script src="script.js"></script>
 </head>
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
             <!-- Profile Picture -->
-            <img src="portfolio.jpeg" alt="Shreyas Patil" class="profile-image" />
+            <img src="portfolio.jpeg" alt="Sangeeth Salvin" class="profile-image" />
             <p>Computer Science Student</p>
         </div>
     </header>
@@ -19,7 +19,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a third-year CSE engineering student specializing in Data Science at SIT Pune, with a keen interest in exploring the practical applications of technology in diverse fields. My educational background includes diplomas in Business Management and Culinary Arts, which have enriched my perspective and creativity. Currently, I'm delving into projects that bridge my understanding of data science with real-world applications, aiming to leverage these skills in both tech and non-tech domains.</p>
+            <p>I’m a third-year computer science student at SIT Pune with a passion for exploring technology and problem-solving. Outside of academics, I enjoy immersing myself in books, exploring the world of arts, and staying active with my love for football. These interests help me bring a well-rounded perspective to my studies, fueling both my creativity and analytical skills.</p>
         </div>
     </section>
 
@@ -29,7 +29,6 @@
             <ul class="education-list">
                 <li><strong>Bachelor of Technology (B.Tech) in Computer Science Engineering</strong> - SIT Pune (2022-Present)</li>
                 <li><strong>Diploma in Business Management</strong> - [SIBM, Pune] (2023-24)</li>
-                <li><strong>Diploma in Culinary Arts</strong> - [SSCA, Pune] (2023-Present)</li>
             </ul>
         </div>
     </section>
@@ -63,10 +62,6 @@
                     <h3>Spam Detection Using Naïve Bayes</h3>
                     <p>Building a spam detection system to classify emails as spam or not spam.</p>
                 </div>
-                <div class="project-card">
-                    <h3>Sleep Apnea Diagnosis</h3>
-                    <p>The Python code implements a machine learning pipeline using a Random Forest classifier to predict sleep disorders based on a health and lifestyle dataset. It preprocesses data, encodes categorical variables, scales features, evaluates model performance using Stratified K-Fold cross-validation, and provides predictions for new patient data.</p>
-                </div>
             </div>
         </div>
     </section>
@@ -76,9 +71,9 @@
             <h2>Contact</h2>
             <p>If you'd like to connect, feel free to reach out via email or LinkedIn.</p>
             <ul class="contact-list">
-                <li>Email: <a href="mailto:shreyaspatil6969@gmail.com">shreyaspatil6969@gmail.com</a></li>
+                <li>Email: <a href="mailto:sangeethsalvin.27@gmail.com">sangeethsalvin.27@gmail.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/shreyaspatil6969" target="_blank">LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/shreyas69notsus" target="_blank">GitHub Profile</a></li>
+                <li>GitHub: <a href="https://github.com/sngthslvn03" target="_blank">GitHub Profile</a></li>
             </ul>
         </div>
     </section>
