--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <footer class="footer">
-        <p>© 2024 Shreyas Patil</p>
+        <p>© 2024 Sangeeth Salvin</p>
     </footer>
 
     <script src="script.js"></script>
